@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2004/12/07 21:29:57 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2004/12/28 02:47:47 reed Exp $
 #
 
-DISTNAME=	openvpn-2.0_beta15
+DISTNAME=	openvpn-2.0_rc1
 PKGNAME=	${DISTNAME:S/_//}
-PKGREVISION=	2
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=openvpn/}
 
