@@ -1,4 +1,4 @@
-@comment $NetBSD$
+@comment $NetBSD: PLIST,v 1.1.1.1 2004/11/17 18:04:04 xtraeme Exp $
 man/man8/openvpn.8
 sbin/openvpn
 share/examples/openvpn/config/README
@@ -21,6 +21,8 @@ share/examples/openvpn/keys/README
 share/examples/openvpn/keys/client.crt
 share/examples/openvpn/keys/client.key
 share/examples/openvpn/keys/dh1024.pem
+share/examples/openvpn/keys/pass.crt
+share/examples/openvpn/keys/pass.key
 share/examples/openvpn/keys/server.crt
 share/examples/openvpn/keys/server.key
 share/examples/openvpn/keys/tmp-ca.crt
