@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2004/12/03 23:13:10 jlam Exp $
+$NetBSD: distinfo,v 1.3 2004/12/14 19:24:29 jlam Exp $
 
-SHA1 (openvpn-2.0_beta15.tar.gz) = f1b210df6c8b6ea45737f97e3a184e6dac7b2ec1
-Size (openvpn-2.0_beta15.tar.gz) = 585952 bytes
+SHA1 (openvpn-2.0_rc1.tar.gz) = 7f0a6de121ee269376c09479a7d75bfd923e3668
+Size (openvpn-2.0_rc1.tar.gz) = 637549 bytes
